cmake_minimum_required(VERSION 3.5)
project(VulkanTest)

include_directories("src" "SDL2-2.0.7/include" "Vulkan/Include")

if(WIN32)
	if(CMAKE_GENERATOR MATCHES "Win64")
		link_directories("SDL2-2.0.7/lib/x64/" "Vulkan/Lib")
	else()
		message( FATAL_ERROR "Win64 is the only supported configuration")
	endif()
	add_definitions(-DWIN32_LEAN_AND_MEAN)
else()
    message( FATAL_ERROR "Win64 is the only supported configuration")
endif ()

if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
	set(CPP11_FLAG "/EHsc")
else()
	include(CheckCXXCompilerFlag)
	check_cxx_compiler_flag("-std=c++14" COMPILER_SUPPORTS_CXX14)
	check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
	check_cxx_compiler_flag("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
	if(COMPILER_SUPPORTS_CXX14)
		set(CPP11_FLAG "-std=c++14")
	elseif(COMPILER_SUPPORTS_CXX11)
		set(CPP11_FLAG "-std=c++11")
	elseif(COMPILER_SUPPORTS_CXX0X)
		set(CPP11_FLAG "-std=c++0x")
	else()
		MESSAGE(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 support. This can result in build failure.")
	endif()
endif()

add_subdirectory(src)

